Added join by visitor
